--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 
 <head>
   <script src="https://cdn.userway.org/widget.js" data-account="BIHqfF6Efu"></script>
